--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
     background: #FA8C16;
     padding-top: 16px;
     padding-bottom: 16px;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
 }
 
 .header-wrapper {
