--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,14 @@
 }
 body {
     font-family: sans-serif;
+    background: #E5E5E5;
 }
 .header {
     background: #FA8C16;
     padding-top: 16px;
     padding-bottom: 16px;
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+    margin-bottom: 30px;
 }
 
 .header-wrapper {
@@ -77,4 +79,117 @@ body {
 .search-input::-webkit-input-placeholder { color: #bfbfbf; }
 .search-input:-ms-input-placeholder { color: #bfbfbf; }
 .search-input::-ms-input-placeholder { color: #bfbfbf; }
-.search-input::placeholder { color: #bfbfbf; }  
+.search-input::placeholder { color: #bfbfbf; } 
+
+.content {
+    max-width: 1200px;
+    width: 90%;
+    margin: auto;
+}
+
+.posts {
+    max-width: 800px;    
+}
+
+.post {
+    background: #FFFFFF;
+    border: 1px solid #E8E8E8;
+    margin-bottom: 30px;
+}
+
+.post-body {
+    padding-top: 35px;
+    padding-right: 35px;
+    padding-left: 35px;
+    padding-bottom: 0;
+}
+
+.post-title {
+    margin-top: 0;
+    margin-bottom: 19px;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+}
+
+.post-text {
+    color: #262626;
+    font-size: 14px;
+    line-height: 22px;
+    font-weight: normal;
+}
+
+.tegs {
+    margin-bottom: 22px;
+}
+
+.teg {
+    color: #BFBFBF;
+    font-size: 14px;
+    line-height: 22px;
+    margin-left: 10px;
+    text-decoration: none;  
+}
+
+.post-footer{
+    background: #FAFAFA;
+    border-top: 1px solid #E8E8E8;
+    display: flex;
+    justify-content: space-between; /* что бы раскинуть по разные стороны */
+    padding-left: 35px;
+    padding-right: 35px;
+    padding-top: 13px;
+    padding-bottom: 13px;
+}
+
+.post-buttons {
+    display: flex;
+    align-items: center;
+}
+.post-button .icon {
+    fill:#8C8C8C; 
+}
+
+.icon-like, .icon-comment {
+    margin-right: 6px;  
+}
+
+.post-button {
+    background-color: transparent;
+    border: none;
+    color: #8C8C8C;
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    line-height: 22px;
+    margin-right: 19px;
+    cursor: pointer;  
+}
+
+.post-author {
+    display: flex;
+    align-items: center;
+    text-align: right;
+}
+
+.post-time {
+    font-size: 12px;
+    line-height: 20px;
+    color: #BFBFBF;
+}
+
+.author-avatar {
+    width: 34px;
+    height: 34px;
+    margin-left: 9px;
+    border-radius: 4px;
+}
+
+.author-username {
+    display: block;
+    text-decoration: none;
+    font-size: 12px;
+    line-height: 20px;
+    color: #8C8C8C;
+}
+
