--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,30 @@
+
+@font-face {
+    font-family: "SFProDisplay-Regular";
+    src: local("SFProDisplay-Regular"), 
+        url('../fonts/SFProDisplay-Regular.woff') format("woff"),
+        url('../fonts/SFProDisplay-Regular.woff2') format("woff2");
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: "SFProDisplay-Semibold";
+    src: local("SFProDisplay-Semibold"), 
+        url('../fonts/SFProDisplay-Semibold.woff') format("woff"),
+        url('../fonts/SFProDisplay-Semibold.woff2') format("woff2");
+    font-weight: bold;
+}
+
+
 * {
     box-sizing: border-box;
 }
+
 body {
-    font-family: sans-serif;
+    font-family: "SFProDisplay-Regular", sans-serif;
     background: #E5E5E5;
 }
+
 .header {
     background: #FA8C16;
     padding-top: 16px;
@@ -85,10 +105,13 @@ body {
     max-width: 1200px;
     width: 90%;
     margin: auto;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
 }
 
 .posts {
-    max-width: 800px;    
+    width: 67%;    
 }
 
 .post {
@@ -105,6 +128,7 @@ body {
 }
 
 .post-title {
+    font-family: "SFProDisplay-Semibold", sans-serif;
     margin-top: 0;
     margin-bottom: 19px;
     font-weight: 600;
@@ -116,7 +140,6 @@ body {
     color: #262626;
     font-size: 14px;
     line-height: 22px;
-    font-weight: normal;
 }
 
 .tegs {
@@ -193,3 +216,167 @@ body {
     color: #8C8C8C;
 }
 
+.sidebar {
+    width: 31%;
+}
+
+.user {
+    background: #FAFAFA;
+    border: 1px solid #E8E8E8;
+    padding: 15px 25px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.user-info {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+}
+
+.user-avatar {
+    border-radius: 50%;
+    margin-right: 17px;
+}
+
+.user-name {
+    font-family: "SFProDisplay-Semibold", sans-serif; 
+    font-size: 16px;
+    line-height: 24px;
+    color: #595959;
+}
+
+.icon-exit {
+    width: 20px;
+    height: 20px;
+    fill: #000000
+}
+
+.sidebar-nav {
+    background:#ffff;
+}
+
+.sidebar-menu {
+    margin: 0;
+    border: 1px solid #E8E8E8;
+    border-top: none;
+    list-style-type: none;
+    padding: 0;
+}
+
+.sidebar-menu-link {
+    text-decoration: none;
+    font-size: 14px;
+    line-height: 22px;
+    color: #595959;
+    padding: 16px 48px;
+    padding-right: 16px;
+    display: inline-block; /* сделать ссылки строчно блочные*/ 
+    width: 100%; 
+    background-color: #FFFFFF;
+}
+
+.sidebar-menu-link:hover {
+    background-color: #FFFBE6;
+
+}
+
+.sidebar-menu-link.active {
+    background-color: #FFFBE6;
+    border-right: 3px solid #FAAD14;;
+}
+
+.button {
+    background: #FAAD14;
+    border-radius: 4px;
+    font-size: 16px;
+    line-height: 24px; 
+    padding: 13px;
+    text-decoration: none;
+    color: #fff;   
+}
+
+.button-new-post {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;    
+    margin-top: 20px;    
+}
+
+.icon-fire {
+    width: 11px;
+    height: 13px;
+    fill: #fff;
+    margin-right: 10px;
+}
+
+.card {
+    border: 1px solid #E8E8E8;
+    background: #FFFFFF;
+    margin-top: 20px;
+
+}
+
+.card-header {
+    background: #FAFAFA;
+    border-bottom: 1px solid #E8E8E8;
+    padding: 23px 25px;
+}
+
+.card-title {
+    font-family: "SFProDisplay-Semibold", sans-serif;
+    margin: 0;
+    font-size: 16px;
+    line-height: 24px;
+    color: #262626;
+}
+
+.card-body {
+    padding: 22px 40px 20px 25px;
+}
+
+.card-body-title {
+    margin: 0 0 10px;
+    font-family: "SFProDisplay-Semibold", sans-serif;
+    font-size: 16px;
+    line-height: 24px;
+    color: #D48806;
+    text-decoration: none;
+}
+
+.card-text {
+    font-size: 14px;
+    line-height: 22px;
+    color: #262626;
+    margin: 10px 0;
+}
+
+.promo {
+    background-color: #ffff;
+    background-image: url('../img/promo.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    border: 1px solid #E8E8E8;
+    width: 100%;
+    height: 260px;
+    margin-top: 20px;
+    position: relative;
+    display: block;
+}
+
+.promo:before {
+    content: "Реклама";
+    position: absolute;
+    right: 0;   
+    top: 0;
+    background: #C4C4C4;
+    padding-right: 26px;
+    padding-left: 26px;
+    font-size: 12px;
+    line-height: 20px;
+    color: #FFFFFF;
+    text-align: center;
+}
